<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.SignUpActivity"
    android:orientation="vertical"
    android:background="@color/FondoGris">

    <TextView
        android:id="@+id/registerTV_SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Registro"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@color/Amarillo"
        android:textSize="60sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/usernameET_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:background="@color/Blanco"
        android:gravity="center"
        android:hint="@string/usuario"
        android:inputType="text"
        android:textSize="20sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/emailET_SignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:background="@color/Blanco"
        android:layout_margin="40dp"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="italic"/>

    <EditText
        android:id="@+id/passwordET_SignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contrasena"
        android:background="@color/Blanco"
        android:inputType="textPassword"
        android:layout_margin="40dp"
        android:textStyle="italic"
        android:textSize="20sp"
        android:gravity="center"/>

    <Button
        android:id="@+id/signUpButton_SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:hint="@string/SignUp_boton"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/changeToLoginButton_SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/FondoGris"
        android:hint="@string/Login_boton"
        android:layout_gravity="center"/>

</LinearLayout>