<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".config.InitialConfigActivity"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/Textview5"

        android:layout_width="276dp"
        android:layout_height="67dp"
        android:layout_gravity="center"
        android:text="@string/Bienvenido"
        android:textColor="@color/Amarillo"
        android:textSize="60sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Textview6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="40dp"
        android:text="@string/SeleccionLibro"
        android:textColor="@color/Blanco"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/Textview7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:text="@string/SeleccionTiempo"
        android:textColor="@color/Blanco"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    />

    <TextView
        android:id="@+id/Textview8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/HorarioPreferente"
        android:textColor="@color/Blanco"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText

        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="0dp"
        android:background="@color/Blanco"
        android:hint="09:00"
        android:inputType="text"
        android:textSize="20sp"
        android:textStyle="italic" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/goToMainAppButton_InitalConfig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:src="@drawable/ic_chevron_right_black_24dp"
        android:layout_margin="16dp"/>

</LinearLayout>